Fix colors on the proctor login page for dark mode.
The colors for this were inline style.  Colors cannot be inline anymore
since the server cannot detect if the user will have the browser in dark
mode or not.  So classes are used instead.

--- a/htdocs/js/System/system.scss
+++ b/htdocs/js/System/system.scss
@@ -1197,6 +1197,23 @@ input.changed[type='text'] {
 	}
 }
 
+// Login proctor styles
+.proctor-login-info {
+	background-color: #ddf;
+
+	&.proctor-login-overtime {
+		background-color: #ffa;
+	}
+
+	[data-bs-theme='dark'] & {
+		background-color: #00d;
+
+		&.proctor-login-overtime {
+			background-color: #550;
+		}
+	}
+}
+
 mjx-help-background {
 	z-index: 1055;
 }
